--- a/Front/src/css/base.scss
+++ b/Front/src/css/base.scss
@@ -7,6 +7,21 @@ textarea{resize:none;overflow:auto;}
 a{text-decoration: none;}
 html{font-size: 62.5%;}
 
+@font-face {font-family: 'iconfont';
+    src: url('../icon/iconfont.eot'); /* IE9*/
+    src: url('../icon/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('../icon/iconfont.woff') format('woff'), /* chrome、firefox */
+        url('../icon/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+        url('../icon/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+}
+.iconfont{
+    font-family:"iconfont" !important;
+    font-size:16px;font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 $H100: 100%;
 
 .H100{height: $H100}
@@ -47,7 +62,11 @@ $H100: 100%;
 
 
 
-
+.hamburger{
+    font-size: 3rem;
+    color: #666;
+    cursor: pointer
+}
 .footer {
     display: block;
     padding: 2em 0 0;
